--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>Paolo Agostinelli</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
