--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container" style="text-align:center;margin-top:25%">
-        <p>Paolo Agostinelli is an Italian Interior Designer based in New York City</a>.</p>
+        <p>Paolo Agostinelli is an Italian Interior Designer based in New York City</p>
       <p><a href="https://www.linkedin.com/in/paolo-agostinelli-11728041/">Linkedin</a></p>
   </div>
 
