--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -34,6 +32,8 @@
   <div class="container" style="text-align:center;margin-top:25%">
         <p>Paolo Agostinelli is an Italian Interior Designer based in New York City</p>
       <p><a href="https://www.linkedin.com/in/paolo-agostinelli-11728041/">Linkedin</a></p>
+      <p><a href="https://www.instagram.com/dodorama">@dodorama</a></p>
+      <p><a href="https://www.instagram.com/two_tall_italians/">@two_tall_italians</a></p>
   </div>
 
 <!-- End Document
